fix: objects page on mobile

--- a/components/Objects/Objects.module.css
+++ b/components/Objects/Objects.module.css
@@ -84,4 +84,8 @@
   .content {
     padding-right: 0;
   }
+
+  .slideImgContainer {
+    height: 200px;
+  }
 }
