--- a/pages/portfolio/index.module.css
+++ b/pages/portfolio/index.module.css
@@ -5,8 +5,9 @@
 }
 
 .section {
-  padding-top: 0 !important;
+  /* padding-top: 0 !important; */
 }
+
 .object {
   display: grid;
   grid-template-columns: 50% 50%;
